# server/features/config/dto/config_response.go
@@ -2,6 +2,6 @@ package dto
 
 // ConfigResponseDto defines the HTTP response payload for server configuration.
 type ConfigResponseDto struct {
-	Mode         string `json:"mode" example:"self-hosted"`
-	AuthRequired bool   `json:"authRequired" example:"false"`
+	AuthRequired bool `json:"authRequired" example:"false"`
+	StreamPort   int  `json:"streamPort" example:"8485"`
 }
